src/Game.css
.Game {
  text-align: center;
}

.Game-header {
  background-color: #222;
  height: 60px;
  padding: 10px;
  color: white;
}

.Game-board {
  height: 70vh;
  overflow-y: scroll;

  padding-bottom: 80px;
}

.Game-guess-row, .Game-scored-guess {
  display: flex;
  justify-content: space-around;
}

.Game-guess-row {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 80px;

  background-color: white;
  border-top: 2px inset black;
}

.Game-scored-guess {
  margin: 15px 0;
}


.Game-row-score {
  min-width: 10vw;
  display: flex;
  justify-content: space-around;
}

.score-dot {
  border-radius: 50%;
  height: 0;
  width: 0;

  margin: 5px 0;
}

.score-dot-black {
  border: 10px solid black;
}

.score-dot-pink {
  border: 10px solid pink;
}

.score-dot-white {
  border: 10px solid white;
}

.guessed-dot {
  border-radius: 50%;
  height: 0;
  width: 0;

  margin: 2.5px;
}

.guess-dot {
  border-radius: 50%;
  height: 0;
  width: 0;

  margin: auto;
}

.dot-0 {
  border: 15px solid red;
}

.dot-1 {
  border: 15px solid orange;
}

.dot-2 {
  border: 15px solid yellow;
}

.dot-3 {
  border: 15px solid green;
}

.dot-4 {
  border: 15px solid blue;
}

.dot-5 {
  border: 15px solid purple;
}

.guess-col button {
  border-radius: 25%;
  border: 2px outset grey;
  background-color: white;

  margin: 3px;
}

.guess-col button:active i {
  display: inline-block;
  transform: translate( 0.75px, 0.75px );
}

.guess-col button:active {
  border-style: inset;
}

.guess-col button:focus {
  outline: none;
}

